force-app/main/default/objects/Tower__c/fields/Bank_A_c_No__c.field-meta.xml
<CustomField>
    <fullName>Bank_A_c_No__c</fullName>
    <label>Bank A/c No</label>
    <length>155</length>
    <type>Text</type>
</CustomField>