force-app/main/default/objects/Tower__c/fields/Bank_GL__c.field-meta.xml
<CustomField>
    <fullName>Bank_GL__c</fullName>
    <label>Bank GL</label>
    <length>155</length>
    <type>Text</type>
</CustomField>