force-app/main/default/objects/Tower__c/fields/GST_GL__c.field-meta.xml
<CustomField>
    <fullName>GST_GL__c</fullName>
    <label>GST GL</label>
    <length>155</length>
    <type>Text</type>
</CustomField>