force-app/main/default/objects/Tower__c/fields/MID__c.field-meta.xml
<CustomField>
    <fullName>MID__c</fullName>
    <label>MID</label>
    <length>155</length>
    <type>Text</type>
</CustomField>