force-app/main/default/objects/Tower__c/fields/Multiple_RM_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Multiple_RM_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple RM Mapping?</label>
    <type>Checkbox</type>
</CustomField>