force-app/main/default/objects/Tower__c/fields/Number_of_Flats_Per_Floor__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Flats_Per_Floor__c</fullName>
    <label>Number of Flats Per Floor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>