force-app/main/default/objects/Tower__c/fields/RERA_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>RERA_Registration_Number__c</fullName>
    <label>RERA Registration Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>