force-app/main/default/objects/Tower__c/fields/SAP_Tower_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Tower_Number__c</fullName>
    <label>SAP Tower Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>