force-app/main/default/objects/Tower__c/fields/TID__c.field-meta.xml
<CustomField>
    <fullName>TID__c</fullName>
    <label>TID</label>
    <length>155</length>
    <type>Text</type>
</CustomField>