force-app/main/default/objects/Tower__c/fields/Tower_Wise_RM_Email__c.field-meta.xml
<CustomField>
    <fullName>Tower_Wise_RM_Email__c</fullName>
    <label>Tower Wise RM Email</label>
    <type>Email</type>
</CustomField>